# emoji-edit

./: .gitignore  README-ZH.md  README.md  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/top/woolensheep/emojiedit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: keystore.bks  xposed_init
app/src/main/assets/index/: .managed.json  meta.json
app/src/main/java/: top_woolensheep_emojiedit_Search.h
app/src/main/java/org/nanohttpd/protocols/http/: NanoHTTPD.java
app/src/main/java/top/woolensheep/emojiedit/: AssetsCopyer.java  BootReceiver.java  EmojiClient.java  EmojiHTTP.java  EmojiServer.java  HookEdit.java  MainActivity.java  Search.java  Utils.java
app/src/main/java/top/woolensheep/emojiedit/hook/: ActivityHook.java  EmojiEdit.java
app/src/main/jni/: CMakeLists.txt  emoji-search.cpp
app/src/main/jni/include/: rs-search.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/top/woolensheep/emojiedit/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
